--- a/homepagestyle.css
+++ b/homepagestyle.css
@@ -2,13 +2,13 @@ nav {
 text-align:center;
 color:white;
 font-size:30px;
-font-family:"Times New Roman", serif；
+font-family:"Times New Roman", serif;
 }
 
 header h1 {
 background-color:#FFEEB0;
 font-size:50px;
-font-family:"Times New Roman", serif；
+font-family:"Times New Roman", serif;
 color:#FFA3C6;
 text-align: center;
 }
@@ -16,13 +16,13 @@ text-align: center;
 header h2 {
 color:white;
 font-size:45px;
-font-family:"Times New Roman", serif；
+font-family:"Times New Roman", serif;
 text-align: center;
 }
 
 p {
 color:white;
-font-family:"Times New Roman", serif；
+font-family:"Times New Roman", serif;
 text-align: center;
 }
 
