--- a/introductionstyle.css
+++ b/introductionstyle.css
@@ -1,6 +1,6 @@
 body {
   background-color: #FFA3C6;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
   color: black;
   margin: 0;
   padding: 0;
@@ -15,7 +15,7 @@ header {
   background-color: #FFEEB0;
   text-align: center;
   font-size: 50px;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
   color: #FFA3C6;
   padding: 30px;
   margin: 0;
@@ -25,7 +25,7 @@ nav {
   text-align: center;
   color: white;
   font-size: 30px;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
   background-color: #FFEEB0;
 }
 
@@ -36,7 +36,7 @@ nav a {
 
 main {
   background-color: white;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
   color: black;
   font-size: 20px;
   padding: 30px;
@@ -50,7 +50,7 @@ cite {
 
 h2 {
   font-size: 50px;
-  font-family: Arial;
+  font-family: "Times New Roman", serif;
   color: #FFEEB0;
 }
 
